tests/baselines/reference/propertyAccessOnTypeParameterWithConstraints4(strict=true).errors.txt
propertyAccessOnTypeParameterWithConstraints4.ts(4,17): error TS2454: Variable 'x' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(4,17): error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
  Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(5,20): error TS2454: Variable 'x' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(5,22): error TS2339: Property 'notHere' does not exist on type 'T'.
propertyAccessOnTypeParameterWithConstraints4.ts(15,10): error TS2454: Variable 'i' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(15,16): error TS2339: Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(16,11): error TS2454: Variable 'i' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(16,11): error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
  Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(21,18): error TS2454: Variable 'a' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(21,22): error TS2339: Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(22,19): error TS2454: Variable 'a' is used before being assigned.
propertyAccessOnTypeParameterWithConstraints4.ts(22,19): error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
  Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(24,5): error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
propertyAccessOnTypeParameterWithConstraints4.ts(26,17): error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
  Property 'notHere' does not exist on type 'Date'.
propertyAccessOnTypeParameterWithConstraints4.ts(27,22): error TS2339: Property 'notHere' does not exist on type 'T'.


==== propertyAccessOnTypeParameterWithConstraints4.ts (15 errors) ====
    class C<T extends Date> {
        f() {
            var x: T;
            var a = x['notHere'](); // should be string
                    ~
!!! error TS2454: Variable 'x' is used before being assigned.
                    ~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
!!! error TS7053:   Property 'notHere' does not exist on type 'Date'.
            return a + x.notHere();
                       ~
!!! error TS2454: Variable 'x' is used before being assigned.
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'T'.
        }
    }
    
    var r = (new C<Date>()).f();
    
    interface I<T extends Date> {
        foo: T;
    }
    var i: I<Date>;
    var r2 = i.foo.notHere();
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
                   ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'Date'.
    var r2b = i.foo['notHere']();
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
              ~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
!!! error TS7053:   Property 'notHere' does not exist on type 'Date'.
    
    var a: {
        <T extends Date>(): T;
    }
    var r3: string = a().notHere();
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'Date'.
    var r3b: string = a()['notHere']();
                      ~
!!! error TS2454: Variable 'a' is used before being assigned.
                      ~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
!!! error TS7053:   Property 'notHere' does not exist on type 'Date'.
    
    var b = {
        ~
!!! error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        foo: <T extends Date>(x: T): T => {
            var a = x['notHere'](); // should be string
                    ~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"notHere"' can't be used to index type 'Date'.
!!! error TS7053:   Property 'notHere' does not exist on type 'Date'.
            return a + x.notHere();
                         ~~~~~~~
!!! error TS2339: Property 'notHere' does not exist on type 'T'.
        },
        bar: b.foo().notHere()
    }
    
    var r4 = b.foo(new Date());